Added Heroku configs

--- a/pom.xml
+++ b/pom.xml
@@ -482,6 +482,12 @@
             <artifactId>cglib</artifactId>
             <version>3.0</version>
         </dependency>
+        <!-- xlsx view -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.14</version>
+        </dependency>
 
 
 
